crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__single-choice-v1.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/single-choice-v1
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "Hello, world!\n" [Choices: "Hello back!" (0) -> 0]
> "Hello back!\n" [Continue]
> "Nice to hear from you\n" [Ended]
outcome: Ended
