crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__choices__state-rollback-over-default-choice.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/choices/state-rollback-over-default-choice
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Text.\n" [Continue]
> "5\n" [Ended]
outcome: Ended
